--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,17 +1,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>NASA picture of the day</title>
+    <title>Time Tracking</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div id="container">
       <input type="text" id="newItem">
       <button id="addButton">+</button>
-      <button id="editButtons">Edit</button>
+      <button id="editButton">Edit</button>
+      <button id="clear">Clear</button>
+      <button id="export">Export</button>
     </div>
-    <div id="buttonList">
-
-    </div>
+    <div id="buttonList"></div>
     <script src="popup.js"></script>
   </body>
 </html>
